# Abandoned_property_restoration

./: .gitignore  LICENSE  MANIFEST.in  README.md  create_workspace.py  diagnose_reports.py  modules.txt  pyproject.toml  requirements.txt  setup.py
abandoned_property_restoration/: check_demo_data.py  check_workspace.py  create_workspace.py  hooks.py  modules.txt
abandoned_property_restoration/abandoned_property_restoration/: tasks.py
abandoned_property_restoration/abandoned_property_restoration/config/: __init__.py
abandoned_property_restoration/abandoned_property_restoration/events/: __init__.py
abandoned_property_restoration/abandoned_property_restoration/fixtures/: ownership_type.json  (+1 more)
abandoned_property_restoration/config/: __init__.py
abandoned_property_restoration/events/: __init__.py
abandoned_property_restoration/fixtures/: historical_document_type.json  material_category.json  material_condition.json  ownership_type.json  project_priority.json  property_category.json  property_type.json  restoration_category.json  restoration_status.json  reward_type.json  risk_level.json  time_capsule_category.json  workspace.json
abandoned_property_restoration/install/: __init__.py
abandoned_property_restoration/patches/: update_workspace_format.py
abandoned_property_restoration/permissions/: __init__.py
abandoned_property_restoration/restoration/: __init__.py
abandoned_property_restoration/scheduler/: __init__.py
abandoned_property_restoration/utils/: __init__.py
abandoned_property_restoration/workspaces/: abandoned_property_restoration.json
(+208 files in other folders)
