[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abandoned_property_restoration"
version = "1.0.0"
description = "Application for identifying, restoring, preserving, and managing abandoned properties"
authors = [{name = "Abandoned Property Restoration Team"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["abandoned_property_restoration*"]
